--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <div class="vídeo-box">
-        <iframe width="560" height="315" src="https://youtu.be/mv-kUuE1Ygs?si=5FR5TDZcLSgmqlvM"
-        fremeborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://youtu.be/mv-kUuE1Ygs?si=5FR5TDZcLSgmqlvM" fremeborder="0" allowfullscreen></iframe>
         <div class="info">
             <h3>Título</h3>
             <p>Descrição breve de vídeo</p>
         </div>
     </div>
-    
 </body>
 </html>
