--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="vídeo-box">
+    <div class="video-box">
         <iframe width="560" height="315" src="https://youtu.be/SKvshKoWLp0?si=aJEofQyod4TWBv16" fremeborder="0" allowfullscreen></iframe>
         <div class="info">
             <h3>Título</h3>
